--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <body>
     <nav class="nav">
         <div class="container">
-            Navigation
+            <div class="nav-row">
+                <a class="logo" href="./index.html">
+                    Serhii <strong>Milienko</strong> 
+                </a>
+                <div class="nav-list">
+                    Nav
+                </div>
+            </div>
         </div>
     </nav>
 </body>
