--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
                 <a class="logo" href="./index.html">
                     Serhii <strong>Milienko</strong> 
                 </a>
-                <div class="nav-list">
-                    Nav
-                </div>
+                <ul class="nav-list">
+                    <li class="nav-list__item"><a class="nav-list__link" href="#">Projects</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link" href="#">Skills</li>
+                    <li class="nav-list__item"><a class="nav-list__link" href="#">Contact</li>
+                </ul>
             </div>
         </div>
     </nav>
