--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                     Serhii <strong>Milienko</strong> 
                 </a>
                 <ul class="nav-list">
-                    <li class="nav-list__item"><a class="nav-list__link" href="#">Projects</a></li>
-                    <li class="nav-list__item"><a class="nav-list__link" href="#">Skills</li>
-                    <li class="nav-list__item"><a class="nav-list__link" href="#">Contact</li>
+                    <li class="nav-list__item"><a class="nav-list__link nav-list__link--active" href="#">Projects</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link" href="#">Skills</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link" href="#">Contact</a></li>
                 </ul>
             </div>
         </div>
