--- a/index.html
+++ b/index.html
@@ -21,5 +21,17 @@
             </div>
         </div>
     </nav>
+    <header class="header">
+            <div class="header__wrapper">
+                <h1 class="header__title">
+                    <strong>Hi, my name is <em>Serhii</em></strong><br>
+                    a frontend developer
+                </h1>
+                <div class="header__text">
+                    <p>with passion for learning and creating</p>
+                </div>
+                <a href="#!" class="btn">Donwload CV</a>
+            </div>
+    </header>
 </body>
 </html>
