--- a/index.html
+++ b/index.html
@@ -76,5 +76,28 @@
             </ul>
         </div>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrapper">
+                <ul class="social">
+                    <li class="social__item">
+                        <a href="#!"><img src="./img/icons/telegram.svg"></a>
+                    </li>
+                    <li class="social__item">
+                        <a href="#!"><img src="./img/icons/gitHub.svg"></a>
+                    </li>
+                    <li class="social__item">
+                        <a href="#!"><img src="./img/icons/instagram.svg"></a>
+                    </li>
+                    <li class="social__item">
+                        <a href="#!"><img src="./img/icons/linkedIn.svg"></a>
+                    </li>
+                </ul>
+                <div class="copyright">
+                    <p>© Serhii Milienko</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
