--- a/index.html
+++ b/index.html
@@ -38,37 +38,37 @@
             <h2 class="title-1">Projects</h2>
             <ul class="projects">
                 <li class="project">
-                    <a href="./project/page.html">
+                    <a href="./projects/project-page.html">
                         <img src="./img/projects/01.jpg" alt="" class="project_img">
                         <h3 class="project__title">Gaming Streaming Portal</h3>
                     </a>>
                 </li>
                 <li class="project">
-                    <a href="./project/page.html">
+                    <a href="./projects/project-page.html">
                         <img src="./img/projects/02.jpg" alt="" class="project_img">
                         <h3 class="project__title">Video Service</h3>
                     </a>
                 </li>
                 <li class="project">
-                    <a href="./project/page.html">
+                    <a href="./projects/project-page.html">
                         <img src="./img/projects/03.jpg" alt="" class="project_img">
                         <h3 class="project__title">Video Portal</h3>
                     </a>
                 </li>
                 <li class="project">
-                    <a href="./project/page.html">
+                    <a href="./projects/project-page.html">
                         <img src="./img/projects/04.jpg" alt="" class="project_img">
                         <h3 class="project__title">Dating App</h3>
                     </a>
                 </li>
                 <li class="project">
-                    <a href="./project/page.html">
+                    <a href="./projects/project-page.html">
                         <img src="./img/projects/05.jpg" alt="" class="project_img">
                         <h3 class="project__title">Landing</h3>
                     </a>
                 </li>
                 <li class="project">
-                    <a href="./project/page.html">
+                    <a href="./projects/project-page.html">
                         <img src="./img/projects/06.jpg" alt="" class="project_img">
                         <h3 class="project__title">Gaming Community</h3>
                     </a>
