--- a/skills.html
+++ b/skills.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <nav class="nav">
         <div class="container">
             <div class="nav-row">
-                <a class="logo" href="../index.html">
+                <a class="logo" href="./index.html">
                     Serhii <strong>Milienko</strong> 
                 </a>
                 <ul class="nav-list">
@@ -21,19 +21,21 @@
             </div>
         </div>
     </nav>
+    
+    </header>
     <main class="section">
         <div class="container">
-            <div class="project-details">
-                <h1 class="title-1">Video Service</h1>
-                <img src="../img/projects/video-service.png" alt="" class="project-details__cover">
-                <div class="project-details__desc">
-                    <p>Skills: React, Node.js, MongoDB</p>
-                </div>
-                <a href="#!" class="btn-outline">
-                    <img src="../img/icons/github-black.svg" alt="">
-                    Github Repo
-                </a>
-            </div>
+            <h1 class="title-1">Skills</h1>
+            <ul class="content-list">
+                <li class="content-list__item">
+                    <h2 class="title-2">Frontend</h2>
+                    <p>JavaScript, TypeScript, ReactJS, Angular, Redux, HTML, CSS, NPM, BootStrap, Yarn, TailwindCSS, StyledComponents</p>
+                </li>
+                <li class="content-list__item">
+                    <h2 class="title-2">Backend</h2>
+                    <p>NodeJs, MySQL, MongoDB, PHP, Lavarel</p>
+                </li>
+            </ul>
         </div>
     </main>
     <footer class="footer">
@@ -41,16 +43,16 @@
             <div class="footer__wrapper">
                 <ul class="social">
                     <li class="social__item">
-                        <a href="#!"><img src="../img/icons/telegram.svg"></a>
+                        <a href="#!"><img src="./img/icons/telegram.svg"></a>
                     </li>
                     <li class="social__item">
-                        <a href="#!"><img src="../img/icons/gitHub.svg"></a>
+                        <a href="#!"><img src="./img/icons/gitHub.svg"></a>
                     </li>
                     <li class="social__item">
-                        <a href="#!"><img src="../img/icons/instagram.svg"></a>
+                        <a href="#!"><img src="./img/icons/instagram.svg"></a>
                     </li>
                     <li class="social__item">
-                        <a href="#!"><img src="../img/icons/linkedIn.svg"></a>
+                        <a href="#!"><img src="./img/icons/linkedIn.svg"></a>
                     </li>
                 </ul>
                 <div class="copyright">
