--- a/contacts.html
+++ b/contacts.html
@@ -15,8 +15,8 @@
                 </a>
                 <ul class="nav-list">
                     <li class="nav-list__item"><a class="nav-list__link" href="./index.html">Projects</a></li>
-                    <li class="nav-list__item"><a class="nav-list__link nav-list__link--active" href="./skills.html">Skills</a></li>
-                    <li class="nav-list__item"><a class="nav-list__link" href="./contacts.html">Contact</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link" href="./skills.html">Skills</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link nav-list__link--active" href="contacts.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -25,15 +25,19 @@
     </header>
     <main class="section">
         <div class="container">
-            <h1 class="title-1">Skills</h1>
+            <h1 class="title-1">Contacts</h1>
             <ul class="content-list">
                 <li class="content-list__item">
-                    <h2 class="title-2">Frontend</h2>
-                    <p>JavaScript, TypeScript, ReactJS, Angular, Redux, HTML, CSS, NPM, BootStrap, Yarn, TailwindCSS, StyledComponents</p>
+                    <h2 class="title-2">Location</h2>
+                    <p>Kyiv, Ukraine</p>
                 </li>
                 <li class="content-list__item">
-                    <h2 class="title-2">Backend</h2>
-                    <p>NodeJs, MySQL, MongoDB, PHP, Lavarel</p>
+                    <h2 class="title-2">Telegram / Whatsapp / Viber</h2>
+                    <p><a href="tel:+380961723535">+38 (096) 172-35-35</a></p>
+                </li>
+                <li class="content-list__item">
+                    <h2 class="title-2">Email</h2>
+                    <p><a href="mailto:Email">sergiymilienko@gmail.com</a></p>
                 </li>
             </ul>
         </div>
