--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                     Serhii <strong>Milienko</strong> 
                 </a>
                 <ul class="nav-list">
-                    <li class="nav-list__item"><a class="nav-list__link nav-list__link--active" href="./projects/project-page.html">Projects</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link nav-list__link--active" href="./index.html">Projects</a></li>
                     <li class="nav-list__item"><a class="nav-list__link" href="./skills.html">Skills</a></li>
-                    <li class="nav-list__item"><a class="nav-list__link" href="#">Contact</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link" href="./contacts.html">Contact</a></li>
                 </ul>
             </div>
         </div>
