dark mode functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a class="logo" href="./index.html">
                     Serhii <strong>Milienko</strong> 
                 </a>
-                <button class="dark-mode-btn dark-mode-btn--active">
+                <button class="dark-mode-btn">
                     <img src="./img/icons/Sun.svg" alt="Light Mode" class="dark-mode-btn__icon">
                     <img src="./img/icons/Moon.svg" alt="Dark Mode" class="dark-mode-btn__icon">
                 </button>
@@ -45,7 +45,7 @@
                     <a href="./projects/project-page.html">
                         <img src="./img/projects/01.jpg" alt="" class="project_img">
                         <h3 class="project__title">Gaming Streaming Portal</h3>
-                    </a>>
+                    </a>
                 </li>
                 <li class="project">
                     <a href="./projects/project-page.html">
