--- a/skills.html
+++ b/skills.html
@@ -13,6 +13,10 @@
                 <a class="logo" href="./index.html">
                     Serhii <strong>Milienko</strong> 
                 </a>
+                <button class="dark-mode-btn">
+                    <img src="./img/icons/Sun.svg" alt="Light Mode" class="dark-mode-btn__icon">
+                    <img src="./img/icons/Moon.svg" alt="Dark Mode" class="dark-mode-btn__icon">
+                </button>
                 <ul class="nav-list">
                     <li class="nav-list__item"><a class="nav-list__link" href="./index.html">Projects</a></li>
                     <li class="nav-list__item"><a class="nav-list__link nav-list__link--active" href="./skills.html">Skills</a></li>
@@ -61,5 +65,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 </html>
