--- a/projects/project-page.html
+++ b/projects/project-page.html
@@ -13,10 +13,14 @@
                 <a class="logo" href="../index.html">
                     Serhii <strong>Milienko</strong> 
                 </a>
+                <button class="dark-mode-btn">
+                    <img src="../img/icons/Sun.svg" alt="Light Mode" class="dark-mode-btn__icon">
+                    <img src="../img/icons/Moon.svg" alt="Dark Mode" class="dark-mode-btn__icon">
+                </button>
                 <ul class="nav-list">
-                    <li class="nav-list__item"><a class="nav-list__link nav-list__link--active" href="#">Projects</a></li>
-                    <li class="nav-list__item"><a class="nav-list__link" href="#">Skills</a></li>
-                    <li class="nav-list__item"><a class="nav-list__link" href="#">Contact</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link nav-list__link--active" href="../index.html">Projects</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link" href="../skills.html">Skills</a></li>
+                    <li class="nav-list__item"><a class="nav-list__link" href="../contacts.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -59,5 +63,6 @@
             </div>
         </div>
     </footer>
+    <script src="../js/main.js"></script>
 </body>
 </html>
